--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
+                <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine Logo" class="logo-img">
                 <h1 class="logo-text">Forbes Integrative Medicine</h1>
             </div>
-            <div class="contact-info">
-                <a href="tel:602-688-4874" class="phone-number"><i class="fas fa-phone"></i> 602-688-4874</a>
+            <button class="mobile-menu-btn" aria-label="Toggle Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="nav-content">
+                <div class="contact-info">
+                    <a href="tel:602-688-4874" class="phone-number"><i class="fas fa-phone"></i> 602-688-4874</a>
+                </div>
             </div>
         </nav>
     </header>
+
+    <div class="floating-header">
+        <div class="floating-content">
+            <a href="#consultation" class="schedule-btn">Schedule Consultation</a>
+        </div>
+    </div>
 
     <main>
         <section class="hero">
@@ -132,6 +146,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
+                    <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine Logo" class="logo-img">
                     <h2 class="logo-text">Forbes Integrative Medicine</h2>
                 </div>
                 <div class="footer-contact">
@@ -144,5 +159,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
