--- a/index.html
+++ b/index.html
@@ -55,16 +55,26 @@
             </div>
         </section>
 
-        <section class="about" id="about">
+        <section class="about-doctor" id="about">
             <div class="container">
-                <div class="about-content">
-                    <div class="about-text">
-                        <h2>What is Medical Acupuncture?</h2>
-                        <p>Medical acupuncture is the integration of evidence-based, modern western medicine and traditional acupuncture. Dr. Forbes utilizes several acupuncture techniques in her practice, including Kiko Matsumoto Style (KMS), auricular acupuncture, Chinese scalp acupuncture, and trigger point dry needling. The visit includes review of your medical history, a physical exam when indicated, and personalized lifestyle, herbal, and pharmaceutical recommendations to improve symptoms and address the underlying root cause of disease.</p>
+                <div class="doctor-profile">
+                    <div class="doctor-image">
+                        <img src="images/doctor-forbes.png" alt="Dr. Forbes" class="profile-img">
                     </div>
-                    <div class="about-image">
-                        <img src="images/doctor-forbes.png" alt="Dr. Forbes" class="doctor-image">
+                    <div class="doctor-info">
+                        <h2>Meet Dr. Janie Forbes</h2>
+                        <p>Dr. Janie Forbes is a board-certified Family Medicine physician and is trained in (integrated structural) medical acupuncture. She graduated from the Penn State College of Medicine and completed her residency in Family Medicine at the University of Virginia, where she also served as chief resident. Following residency, Dr. Forbes received her medical acupuncture training at the University of New England College of Osteopathic Medicine.</p>
+                        <p>Her dedication to integrative and holistic healing extends to Ayurvedic medicine, having studied under the renowned Dr. Vasant Lad at the Ayurvedic Institute, where she earned a certification in Marma Therapy. Before relocating to sunny Phoenix, AZ with her family, Dr. Forbes served as an Assistant Professor at the University of Virginia School of Medicine. At present, she is a part-time faculty member at the University of Arizona College of Medicine. Dr. Forbes is licensed in both Arizona and Virginia.</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="medical-acupuncture">
+            <div class="container">
+                <div class="acupuncture-content">
+                    <h2>What is Medical Acupuncture?</h2>
+                    <p>Medical acupuncture is the integration of evidence-based, modern western medicine and traditional acupuncture. Dr. Forbes utilizes several acupuncture techniques in her practice, including Kiko Matsumoto Style (KMS), auricular acupuncture, Chinese scalp acupuncture, and trigger point dry needling. The visit includes review of your medical history, a physical exam when indicated, and personalized lifestyle, herbal, and pharmaceutical recommendations to improve symptoms and address the underlying root cause of disease.</p>
                 </div>
             </div>
         </section>
