--- a/services.html
+++ b/services.html
@@ -3,25 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - Forbes Integrative Medicine</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/sections.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <meta name="description" content="Discover our comprehensive medical services at Forbes Integrative Medicine. From acupuncture to integrative medicine, we offer personalized care for optimal health.">
+    <title>Our Services - Forbes Integrative Medicine</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/sections.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">
-                <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine Logo" class="logo-img">
-                <h1 class="logo-text">Forbes Integrative Medicine</h1>
-            </div>
-            <button class="mobile-menu-btn" aria-label="Toggle Menu">
+            <a href="index.html" class="logo">
+                <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine" class="logo-img">
+            </a>
+            <button class="mobile-menu-btn">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
             <div class="nav-content">
+                <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="index.html#about" class="nav-link">About</a></li>
+                    <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
+                </ul>
                 <div class="contact-info">
                     <a href="tel:602-688-4874" class="phone-number"><i class="fas fa-phone"></i> 602-688-4874</a>
                 </div>
@@ -29,43 +39,46 @@
         </nav>
     </header>
 
+    <a href="index.html#contact-section" class="consultation-btn">Schedule Consultation</a>
+
     <div class="floating-header">
-        <div class="floating-content">
-            <a href="#consultation" class="schedule-btn">Schedule Consultation</a>
-        </div>
+        <nav class="container">
+            <a href="index.html" class="logo">
+                <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine">
+            </a>
+            <button class="mobile-menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="nav-content">
+                <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="index.html#about" class="nav-link">About</a></li>
+                    <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
+                </ul>
+                <a href="index.html#contact-section" class="schedule-btn">Schedule Consultation</a>
+            </div>
+        </nav>
     </div>
 
     <main>
         <section class="services-hero">
             <div class="container">
                 <h1>Our Services</h1>
-                <p class="subtitle">Integrate ancient wisdom with modern medicine for optimal health</p>
+                <p class="subtitle">Comprehensive care integrating ancient wisdom with modern medicine</p>
             </div>
         </section>
 
-        <section class="about-doctor">
+        <section class="medical-acupuncture">
             <div class="container">
-                <div class="doctor-profile">
-                    <div class="doctor-image">
-                        <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66e1d0c72da77e6dab6392f8.png" alt="Dr. Janie Forbes" class="profile-img">
-                    </div>
-                    <div class="doctor-info">
-                        <h2>Meet Dr. Janie Forbes</h2>
-                        <p>Dr. Janie Forbes is a board-certified physician who combines the best of modern medicine with time-tested healing traditions. With extensive training in both conventional medicine and integrative therapies, she brings a unique, comprehensive approach to healthcare that addresses the root cause of illness while providing immediate symptom relief.</p>
-                        <p>Her expertise spans medical acupuncture, integrative medicine, and primary care, allowing her to create personalized treatment plans that draw from multiple healing traditions. Dr. Forbes is committed to spending quality time with each patient, listening to their concerns, and developing lasting partnerships for optimal health outcomes.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="services-grid">
-            <div class="container">
-                <div class="service-card">
+                <div class="service-card featured">
                     <div class="service-icon">
                         <i class="fas fa-needle"></i>
                     </div>
                     <h2>Medical Acupuncture</h2>
-                    <p class="service-description">Medical acupuncture is the integration of evidence-based, modern western medicine and traditional acupuncture. Dr. Forbes utilizes several acupuncture techniques in her practice, including Kiko Matsumoto Style (KMS), auricular acupuncture, Chinese scalp acupuncture, and trigger point dry needling. The visit includes review of your medical history, a physical exam when indicated, and personalized lifestyle, herbal, and pharmaceutical recommendations to improve symptoms and address the underlying root cause of disease.</p>
+                    <p class="service-description">Medical acupuncture is the integration of evidence-based, modern western medicine and traditional acupuncture. Dr. Forbes utilizes several acupuncture techniques in her practice, including Kiko Matsumoto Style (KMS), auricular acupuncture, Chinese scalp acupuncture, and trigger point dry needling.</p>
                     
                     <div class="benefits">
                         <h3>Benefits</h3>
@@ -107,7 +120,7 @@
                         </ul>
                     </div>
 
-                    <a href="#consultation" class="cta-button">Book Consultation</a>
+                    <a href="index.html#contact-section" class="cta-button">Schedule Consultation</a>
                 </div>
 
                 <div class="service-card">
@@ -140,33 +153,7 @@
                         </ul>
                     </div>
 
-                    <a href="#consultation" class="cta-button">Book Consultation</a>
-                </div>
-
-                <div class="service-card featured">
-                    <div class="service-icon">
-                        <i class="fas fa-user-doctor"></i>
-                    </div>
-                    <div class="coming-soon">Coming in 2025</div>
-                    <h2>Direct Primary Care</h2>
-                    <p class="service-description">A revolutionary healthcare model that increases patient access through direct doctor relationships, bypassing traditional insurance.</p>
-                    
-                    <div class="benefits">
-                        <h3>What's Included</h3>
-                        <ul>
-                            <li>Unlimited visits and direct doctor communication</li>
-                            <li>Extended visits (30-60 minutes)</li>
-                            <li>Same or next-day access</li>
-                            <li>Comprehensive primary care services</li>
-                            <li>Preventive care and chronic disease management</li>
-                        </ul>
-                    </div>
-
-                    <div class="pricing">
-                        <p>Affordable monthly membership - Contact for pricing details</p>
-                    </div>
-
-                    <a href="#consultation" class="cta-button">Learn More</a>
+                    <a href="index.html#contact-section" class="cta-button">Schedule Consultation</a>
                 </div>
 
                 <div class="service-card">
@@ -196,7 +183,7 @@
                         </ul>
                     </div>
 
-                    <a href="#consultation" class="cta-button">Book Consultation</a>
+                    <a href="index.html#contact-section" class="cta-button">Schedule Consultation</a>
                 </div>
 
                 <div class="service-card">
@@ -242,73 +229,16 @@
                         </ul>
                     </div>
 
-                    <a href="#consultation" class="cta-button">Book Coaching</a>
+                    <a href="index.html#contact-section" class="cta-button">Schedule Consultation</a>
                 </div>
             </div>
         </section>
 
-        <section class="testimonials">
+        <section class="cta">
             <div class="container">
-                <h2>What Our Patients Say</h2>
-                <div class="testimonial-grid">
-                    <div class="testimonial-card">
-                        <div class="quote">"Dr. Forbes spent so much time with me on the first visit. I've never experienced anything similar from a medical doctor in my life. It was clear she cared deeply about my entire story and was determined to come up with a treatment plan that was unique to my situation."</div>
-                        <a href="#" class="read-more">Read more</a>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="quote">"After months of extreme anxiety and restless nights, I finally decided to give acupuncture a try. With Dr. Forbes, I was relaxed within MINUTES. Her comfortable and confident demeanor and the work that she did was so relaxing."</div>
-                        <a href="#" class="read-more">Read more</a>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="quote">"The treatment allowed me to process my anxiety. During the course of the treatment, I relaxed enough to figure out where the anxiety stemmed and addressed it head on. I would recommend it to anyone that wants to explore something that has been holding them back."</div>
-                        <a href="#" class="read-more">Read more</a>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="quote">"As a new mom, I was overwhelmed and exhausted. Dr. Forbes provided invaluable support during my postpartum journey, offering practical advice and emotional encouragement every step of the way."</div>
-                        <a href="#" class="read-more">Read more</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="faq">
-            <div class="container">
-                <h2>Frequently Asked Questions</h2>
-                <div class="faq-grid">
-                    <div class="faq-item">
-                        <h3>What should I expect during my first acupuncture session?</h3>
-                        <div class="faq-answer">Click to learn more about your first visit</div>
-                    </div>
-                    <div class="faq-item">
-                        <h3>How many acupuncture sessions will I need?</h3>
-                        <div class="faq-answer">Click to learn about treatment frequency</div>
-                    </div>
-                    <div class="faq-item">
-                        <h3>Is acupuncture painful?</h3>
-                        <div class="faq-answer">Click to learn about the experience</div>
-                    </div>
-                    <div class="faq-item">
-                        <h3>Are there any side effects?</h3>
-                        <div class="faq-answer">Click to learn about safety</div>
-                    </div>
-                    <div class="faq-item">
-                        <h3>Does insurance cover acupuncture?</h3>
-                        <div class="faq-answer">Click to learn about coverage</div>
-                    </div>
-                    <div class="faq-item">
-                        <h3>What if I don't like needles?</h3>
-                        <div class="faq-answer">Click to learn about alternatives</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="cta-section">
-            <div class="container">
-                <h2>Ready to Transform Your Health?</h2>
-                <p>Book your consultation today and take the first step towards natural healing</p>
-                <a href="#consultation" class="cta-button">Book Your Consultation Now</a>
-                <p class="limited-spots">** Limited Spots Available **</p>
+                <h2>Ready to Start Your Healing Journey?</h2>
+                <p>Take the first step towards optimal health and wellness.</p>
+                <a href="index.html#contact-section" class="cta-button">Schedule Your Consultation</a>
             </div>
         </section>
     </main>
@@ -317,7 +247,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine Logo" class="logo-img">
+                    <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine" class="logo-img">
                     <h2 class="logo-text">Forbes Integrative Medicine</h2>
                 </div>
                 <div class="footer-contact">
