--- a/index.html
+++ b/index.html
@@ -65,16 +65,27 @@
 
     <main>
         <section class="hero">
-            <div class="hero-video">
-                <video autoplay muted loop playsinline>
-                    <source src="videos/acupuncture-intro.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="hero-background"></div>
+            <div class="hero-container">
+                <div class="hero-left">
+                    <div class="video-placeholder">
+                        <video autoplay muted loop playsinline>
+                            <source src="videos/acupuncture-intro.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                </div>
+                <div class="hero-right">
+                    <div class="hero-content">
+                        <h1>Transform Your Health Through Integrative Medicine</h1>
+                        <p>Experience personalized care that combines the best of modern medicine with time-tested natural therapies. Start your journey to optimal health today.</p>
+                        <a href="#contact-section" class="cta-button">Schedule Your Consultation</a>
+                    </div>
+                </div>
             </div>
-            <div class="hero-content">
-                <h1>Experience Natural Healing with Medical Acupuncture</h1>
-                <p>Integrate ancient wisdom with modern medicine for optimal health.</p>
-                <a href="#contact-section" class="cta-button">Book Your Consultation Now</a>
+            <div class="scroll-indicator">
+                <span>Explore Our Services</span>
+                <div class="chevron"></div>
             </div>
         </section>
 
