--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
             <div class="nav-content">
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="services.html" class="nav-link active">Services</a></li>
                     <li><a href="index.html#about" class="nav-link">About</a></li>
                     <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
                 </ul>
@@ -56,7 +56,7 @@
             <div class="nav-content">
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="services.html" class="nav-link active">Services</a></li>
                     <li><a href="index.html#about" class="nav-link">About</a></li>
                     <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
                 </ul>
@@ -66,13 +66,17 @@
     </div>
 
     <main>
-        <section class="services-hero">
-            <div class="hero-overlay"></div>
-            <div class="container">
-                <div class="hero-content">
+        <section class="hero services-hero">
+            <div class="hero-background"></div>
+            <div class="hero-container">
+                <div class="hero-content centered">
                     <h1>Our Services</h1>
-                    <p class="subtitle">Discover holistic healing through integrated medical expertise</p>
+                    <p>Comprehensive integrative medicine solutions tailored to your unique health needs</p>
                 </div>
+            </div>
+            <div class="scroll-indicator">
+                <span>View Services</span>
+                <div class="chevron"></div>
             </div>
         </section>
 
