--- a/services.html
+++ b/services.html
@@ -40,29 +40,10 @@
         </nav>
     </header>
 
-    <a href="index.html#contact-section" class="consultation-btn">Schedule Consultation</a>
-
-    <div class="floating-header">
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine">
-                <span class="logo-text">Forbes Integrative Medicine</span>
-            </a>
-            <button class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <div class="nav-content">
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="services.html" class="nav-link active">Services</a></li>
-                    <li><a href="index.html#about" class="nav-link">About</a></li>
-                    <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
-                </ul>
-                <a href="index.html#contact-section" class="schedule-btn">Schedule Consultation</a>
-            </div>
-        </nav>
+    <div class="services-header">
+        <div class="container">
+            <a href="index.html#contact-section" class="consultation-btn">Schedule Consultation</a>
+        </div>
     </div>
 
     <main>
