--- a/index.html
+++ b/index.html
@@ -19,22 +19,27 @@
         <nav class="nav-container">
             <a href="index.html" class="logo">
                 <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine" class="logo-img">
+                <span class="logo-text">Forbes Integrative Medicine</span>
             </a>
             <button class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="menu-text">Navigation</span>
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </button>
             <div class="nav-content">
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                    <li><a href="tel:+1-602-688-4874" class="nav-link phone-link">
+                        <i class="fas fa-phone"></i>
+                        <strong>(602) 688-4874</strong>
+                    </a></li>
                 </ul>
-                <div class="contact-info">
-                    <a href="tel:602-688-4874" class="phone-number"><i class="fas fa-phone"></i> 602-688-4874</a>
-                </div>
             </div>
         </nav>
     </header>
@@ -45,18 +50,26 @@
         <nav class="container">
             <a href="index.html" class="logo">
                 <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine">
+                <span class="logo-text">Forbes Integrative Medicine</span>
             </a>
             <button class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="menu-text">Navigation</span>
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </button>
             <div class="nav-content">
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                    <li><a href="tel:+1-602-688-4874" class="nav-link phone-link">
+                        <i class="fas fa-phone"></i>
+                        <strong>(602) 688-4874</strong>
+                    </a></li>
                 </ul>
                 <a href="#contact-section" class="schedule-btn">Schedule Consultation</a>
             </div>
@@ -173,6 +186,49 @@
                     <div class="benefits-image">
                         <img src="images/procedure.webp" alt="Acupuncture procedure" class="procedure-image">
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="container">
+                <h2>What Our Patients Say</h2>
+                <div class="testimonials-carousel">
+                    <div class="testimonial-track">
+                        <div class="testimonial-card">
+                            <div class="testimonial-content">
+                                <i class="fas fa-quote-left"></i>
+                                <p>Dr. Forbes spent so much time with me on the first visit. I've never experienced anything similar from a medical doctor in my life. It was clear she cared deeply about my entire story and was determined to come up with a treatment plan that was unique to my situation. Working closely with Dr. Forbes has helped my pain stay under control and has improved my quality of life immensely.</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <div class="testimonial-content">
+                                <i class="fas fa-quote-left"></i>
+                                <p>Dr. Forbes spent so much time with me on the first visit. I've never experienced anything similar from a medical doctor in my life. It was clear she cared deeply about my entire story and was determined to come up with a treatment plan that was unique to my situation. Working closely with Dr. Forbes has helped my pain stay under control and has improved my quality of life immensely.</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <div class="testimonial-content">
+                                <i class="fas fa-quote-left"></i>
+                                <p>Dr. Forbes spent so much time with me on the first visit. I've never experienced anything similar from a medical doctor in my life. It was clear she cared deeply about my entire story and was determined to come up with a treatment plan that was unique to my situation. Working closely with Dr. Forbes has helped my pain stay under control and has improved my quality of life immensely.</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <div class="testimonial-content">
+                                <i class="fas fa-quote-left"></i>
+                                <p>Dr. Forbes spent so much time with me on the first visit. I've never experienced anything similar from a medical doctor in my life. It was clear she cared deeply about my entire story and was determined to come up with a treatment plan that was unique to my situation. Working closely with Dr. Forbes has helped my pain stay under control and has improved my quality of life immensely.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-controls">
+                    <button class="prev-btn" aria-label="Previous testimonial">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <div class="testimonial-dots"></div>
+                    <button class="next-btn" aria-label="Next testimonial">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
         </section>
