--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             </button>
             <div class="nav-content">
                 <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link active">Home</a></li>
                     <li><a href="services.html" class="nav-link">Services</a></li>
-                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
                     <li><a href="tel:+1-602-688-4874" class="nav-link phone-link">
                         <i class="fas fa-phone"></i>
-                        <strong>(602) 688-4874</strong>
+                        <strong>(602) 688-4874)</strong>
                     </a></li>
                 </ul>
             </div>
@@ -62,13 +62,13 @@
             </button>
             <div class="nav-content">
                 <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link active">Home</a></li>
                     <li><a href="services.html" class="nav-link">Services</a></li>
-                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
                     <li><a href="tel:+1-602-688-4874" class="nav-link phone-link">
                         <i class="fas fa-phone"></i>
-                        <strong>(602) 688-4874</strong>
+                        <strong>(602) 688-4874)</strong>
                     </a></li>
                 </ul>
                 <a href="#contact-section" class="schedule-btn">Schedule Consultation</a>
