--- a/services.html
+++ b/services.html
@@ -19,11 +19,15 @@
         <nav class="nav-container">
             <a href="index.html" class="logo">
                 <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine" class="logo-img">
+                <span class="logo-text">Forbes Integrative Medicine</span>
             </a>
             <button class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="menu-text">Navigation</span>
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </button>
             <div class="nav-content">
                 <ul class="nav-menu">
@@ -31,10 +35,11 @@
                     <li><a href="services.html" class="nav-link active">Services</a></li>
                     <li><a href="index.html#about" class="nav-link">About</a></li>
                     <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
+                    <li><a href="tel:+1-602-688-4874" class="nav-link phone-link">
+                        <i class="fas fa-phone"></i>
+                        <strong>(602) 688-4874</strong>
+                    </a></li>
                 </ul>
-                <div class="contact-info">
-                    <a href="tel:602-688-4874" class="phone-number"><i class="fas fa-phone"></i> 602-688-4874</a>
-                </div>
             </div>
         </nav>
     </header>
@@ -45,11 +50,15 @@
         <nav class="container">
             <a href="index.html" class="logo">
                 <img src="https://storage.googleapis.com/msgsndr/zOxsziHYNept0GFVJlUp/media/66d7acf2766f98ead62ac237.png" alt="Forbes Integrative Medicine">
+                <span class="logo-text">Forbes Integrative Medicine</span>
             </a>
             <button class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="menu-text">Navigation</span>
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </button>
             <div class="nav-content">
                 <ul class="nav-menu">
@@ -57,8 +66,12 @@
                     <li><a href="services.html" class="nav-link active">Services</a></li>
                     <li><a href="index.html#about" class="nav-link">About</a></li>
                     <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
+                    <li><a href="tel:+1-602-688-4874" class="nav-link phone-link">
+                        <i class="fas fa-phone"></i>
+                        <strong>(602) 688-4874</strong>
+                    </a></li>
                 </ul>
-                <a href="index.html#contact-section" class="consultation-btn">Schedule Consultation</a>
+                <a href="index.html#contact-section" class="schedule-btn">Schedule Consultation</a>
             </div>
         </nav>
     </div>
